// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render email address of a guest 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
  border-bottom-color: #e6e6e6;
  border-bottom-style: solid;
  border-bottom-width: 2px;
  border-left-color: #e6e6e6;
  border-left-style: solid;
  border-left-width: 0;
  border-right-color: #e6e6e6;
  border-right-style: solid;
  border-right-width: 0;
  border-top-color: #e6e6e6;
  border-top-style: solid;
  border-top-width: 0;
  padding-bottom: 16px;
  padding-left: 0;
  padding-right: 0;
  padding-top: 16px;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 700;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
}

<div
  className="c0"
>
   
  <span
    className="c1"
  >
    guest.email@example.com
  </span>
</div>
`;

exports[`render email address of a user with an account 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  color: #3c3c3c;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 400;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
  border-bottom-color: #e6e6e6;
  border-bottom-style: solid;
  border-bottom-width: 2px;
  border-left-color: #e6e6e6;
  border-left-style: solid;
  border-left-width: 0;
  border-right-color: #e6e6e6;
  border-right-style: solid;
  border-right-width: 0;
  border-top-color: #e6e6e6;
  border-top-style: solid;
  border-top-width: 0;
  padding-bottom: 16px;
  padding-left: 0;
  padding-right: 0;
  padding-top: 16px;
}

.c1 {
  -webkit-font-smoothing: antialiased;
  color: #505558;
  font-family: 'Source Sans Pro','Helvetica Neue',Helvetica,sans-serif;
  font-size: 14px;
  font-style: normal;
  font-stretch: normal;
  font-weight: 700;
  -webkit-letter-spacing: .02em;
  -moz-letter-spacing: .02em;
  -ms-letter-spacing: .02em;
  letter-spacing: .02em;
  line-height: 1.25;
}

<div
  className="c0"
>
  Signed in as
   
  <span
    className="c1"
  >
    account.email@example.com
  </span>
</div>
`;
